feat: add Department page

--- a/src/department.pug
+++ b/src/department.pug
@@ -20,7 +20,7 @@ block content
 			p.section-hero__text Многоуровневая система контроля и анализа деятельности
 			img.section-hero__bg(src="images/section-hero/bg1.jpg", alt)
 			// Results
-			.results.results--white-line
+			.section-hero__results-row.results.results--white-line
 				.results__row
 					// Col
 					.results__col
@@ -56,6 +56,7 @@ block content
 						| UKAS management system
 
 
+
 	// Section Actions
 	.section-actions.container
 		section.section-actions__col
@@ -79,10 +80,10 @@ block content
 				li.section-actions__list-elem Инфраструктура
 				li.section-actions__list-elem Оборудование
 		section.section-actions__col
-			h2.section-actions__title Corrective and preventive action
+			h2.section-actions__title.section-actions__title--low-margin Corrective and preventive action
 			p.section-actions__text Температурный режим хранения, выполнение согласованного регламента по обращению с товарами, требующими особых условий хранения и обработки
 		section.section-actions__col
-			h2.section-actions__title Обратная связь
+			h2.section-actions__title.section-actions__title--low-margin Обратная связь
 			p.section-actions__text Регулярные опросы действующих клиентов о качестве сервиса
 
 	// Section Contacts
