--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -17,20 +17,24 @@ block content
 			li.list-arrow__elem
 				a(href="index.html", target="_blank") Главная
 			li.list-arrow__elem
+				a(href="404.html", target="_blank") 404
+			li.list-arrow__elem -----------------------------------
+			li.list-arrow__elem
 				a(href="industries.html", target="_blank") Индустрии
 			li.list-arrow__elem
 				a(href="industry.html", target="_blank") Карточка индустрии
-			li.list-arrow__elem
-				a(href="404.html", target="_blank") 404
-			li.list-arrow__elem
-				a(href="press-list.html", target="_blank") Пресс-релизы
 			li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
+				a(href="press-list.html", target="_blank") Пресс-релизы
+			li.list-arrow__elem
 				a(href="press-item.html", target="_blank") Пресс-релиз
+			li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="career.html", target="_blank") Карьера
 			li.list-arrow__elem
 				a(href="career-list.html", target="_blank") Список вакансий
 			li.list-arrow__elem
 				a(href="career-item.html", target="_blank") Карточка вакансии
-
+			li.list-arrow__elem -----------------------------------
+			li.list-arrow__elem
+				a(href="department.html", target="_blank") Отдел службы качества
