--- a/src/scss/components/sections/_section-actions.scss
+++ b/src/scss/components/sections/_section-actions.scss
@@ -2,20 +2,24 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: auto;
-	grid-column-gap: 120px;
-	grid-row-gap: 100px;
-	padding-top: 30px;
-	padding-bottom: 30px;
+	grid-row-gap: 75px;
+	padding-top: 51px;
+	padding-bottom: 96px;
 
 	&__col {
+		padding-right: 103px;
 	}
 
 	&__title {
 		margin-top: 0;
-		margin-bottom: 54px;
+		margin-bottom: 55px;
 		font-size: 24px;
 		line-height: 32px;
 		font-weight: 700;
+
+		&--low-margin {
+			margin-bottom: 40px;
+		}
 	}
 
 	&__list {
@@ -30,7 +34,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		padding: 10px;
+		padding: 19px 10px;
 		background-color: $color-white;
 		border-radius: 25px;
 		font-size: 16px;
