--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -20,9 +20,14 @@ block content
 				a(href="404.html", target="_blank") 404
 			li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
-				a(href="industries.html", target="_blank") Индустрии
+				a(href="industry-list.html", target="_blank") Индустрии
 			li.list-arrow__elem
 				a(href="industry.html", target="_blank") Карточка индустрии
+			li.list-arrow__elem -----------------------------------
+			li.list-arrow__elem
+				a(href="service-list.html", target="_blank") Услуги
+			li.list-arrow__elem
+				a(href="service.html", target="_blank") Услуга
 			li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="press-list.html", target="_blank") Пресс-релизы
