--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -37,3 +37,6 @@
 @import "sections/section-vacancy-item";
 @import "sections/section-text";
 @import "sections/section-actions";
+@import "sections/section-service-list";
+@import "sections/section-experience";
+@import "sections/section-other-services";
