--- a/src/scss/components/blocks/_button.scss
+++ b/src/scss/components/blocks/_button.scss
@@ -92,6 +92,12 @@
 			padding-top: 15px;
 			padding-bottom: 16px;
 		}
+
+		&.button--text-medium {
+			font-size: 20px;
+			padding-top: 18px;
+			font-weight: 700;
+		}
 	}
 
 	&--xs {
