--- a/src/scss/components/blocks/_card.scss
+++ b/src/scss/components/blocks/_card.scss
@@ -1,6 +1,7 @@
 .card {
 	position: relative;
 	z-index: 0;
+	min-height: 379px;
 	padding: 37px 42px 40px;
 	border-radius: 25px;
 	background-color: $color-blue;
@@ -15,6 +16,21 @@
 		padding-bottom: 49px;
 	}
 
+	&--experience {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		min-height: 300px;
+		padding: 34px 26px 29px;
+	}
+
+	&--other-services {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		padding: 37px 45px 48px;
+	}
+
 	&__title-box {
 		display: flex;
 		align-items: center;
@@ -24,6 +40,21 @@
 		.card--text-top & {
 			margin-top: auto;
 		}
+
+		.card--experience & {
+			margin-top: auto;
+			width: 100%;
+			margin-bottom: 17px;
+		}
+
+		.card--text-top-medium & {
+			margin-bottom: 29px;
+		}
+
+		.card--other-services &{
+			margin-top: auto;
+			margin-bottom: 31px;
+		}
 	}
 
 	&__title {
@@ -32,11 +63,21 @@
 		font-size: 32px;
 		line-height: 36px;
 		font-weight: 900;
+
+		.card--experience & {
+			font-family: $font-primary;
+		}
 	}
 
 	&__arrow {
 		width: 22px;
 		height: 36px;
+
+		.card--experience & {
+			width: 40px;
+			height: 74px;
+			margin-right: 23px;
+		}
 	}
 
 	&__bg-box {
@@ -76,13 +117,19 @@
 	}
 
 	&__text-box {
-		margin-bottom: 74px;
+		margin-bottom: 20px;
 		font-size: 16px;
 		line-height: 18px;
 		font-weight: 500;
 		opacity: 0;
 		transform: translateX(-20px);
 		transition: opacity $transition-default, transform $transition-default;
+
+		.card--text-top-medium & {
+			font-family: $font-secondary;
+			font-size: 24px;
+			line-height: 24px;
+		}
 
 		.card:hover & {
 			opacity: 1;
@@ -108,5 +155,29 @@
 		.card--text-top:hover & {
 			transform: translateY(-7px);
 		}
+		.card--other-services & {
+			width: 100%;
+			max-width: 147px;
+		}
+	}
+
+	&__tag-list {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -8px;
+		padding: 0;
+		list-style-type: none;
+	}
+
+	&__tag {
+		margin: 0 8px 8px;
+		padding: 7px 21px;
+		border-radius: 20px;
+		background-color: $color-white;
+		font-family: $font-additional;
+		font-size: 14px;
+		line-height: 18px;
+		font-weight: 500;
+		color: $color-blue;
 	}
 }
