feat: add Terminals page

--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -43,3 +43,5 @@ block content
 			li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="department.html", target="_blank") Отдел службы качества
+			li.list-arrow__elem
+				a(href="terminals.html", target="_blank") Наши терминалы
