--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,5 +1,5 @@
 // Footer
-footer.footer
+footer.footer(class=typeof footerLowTopPadding === "undefined" ? "" : "footer--low-top-padding")
 	.container.footer__container
 		.footer__row
 			// Nav col
