--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -40,3 +40,4 @@
 @import "sections/section-service-list";
 @import "sections/section-experience";
 @import "sections/section-other-services";
+@import "sections/section-terminals";
