feat: add Case list page

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -41,3 +41,4 @@
 @import "sections/section-experience";
 @import "sections/section-other-services";
 @import "sections/section-terminals";
+@import "sections/section-case-list";
