--- a/src/scss/components/blocks/_card.scss
+++ b/src/scss/components/blocks/_card.scss
@@ -16,12 +16,17 @@
 		padding-bottom: 49px;
 	}
 
-	&--experience {
+	&--experience,
+	&--cases {
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
 		min-height: 300px;
 		padding: 34px 26px 29px;
+	}
+
+	&--cases {
+		border-radius: 10px;
 	}
 
 	&--other-services {
@@ -47,6 +52,11 @@
 			margin-bottom: 17px;
 		}
 
+		.card--cases & {
+			 width: 100%;
+			 margin-bottom: 17px;
+		 }
+
 		.card--text-top-medium & {
 			margin-bottom: 29px;
 		}
@@ -64,7 +74,8 @@
 		line-height: 36px;
 		font-weight: 900;
 
-		.card--experience & {
+		.card--experience &,
+		.card--cases & {
 			font-family: $font-primary;
 		}
 	}
@@ -73,7 +84,8 @@
 		width: 22px;
 		height: 36px;
 
-		.card--experience & {
+		.card--experience &,
+		.card--cases & {
 			width: 40px;
 			height: 74px;
 			margin-right: 23px;
@@ -135,6 +147,14 @@
 			opacity: 1;
 			transform: none;
 		}
+
+		.card--cases & {
+			margin: auto 0;
+			font-family: $font-additional;
+			font-size: 14px;
+			line-height: 18px;
+			font-weight: 500;
+		}
 	}
 
 	&__text {
@@ -179,5 +199,10 @@
 		line-height: 18px;
 		font-weight: 500;
 		color: $color-blue;
+
+		.card--cases & {
+			font-family: $font-secondary;
+			font-weight: 700;
+		}
 	}
 }
