feat: add Case page

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -15,6 +15,7 @@
 @import "blocks/list-arrow";
 @import "blocks/job-search";
 @import "blocks/results";
+@import "blocks/decision";
 
 @import "sections/section-ready";
 @import "sections/section-nav";
