feat: add Contacts page

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -43,3 +43,4 @@
 @import "sections/section-other-services";
 @import "sections/section-terminals";
 @import "sections/section-case-list";
+@import "sections/section-contact-info";
