--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -71,8 +71,8 @@ footer.footer(class=typeof footerLowTopPadding === "undefined" ? "" : "footer--l
 				p.footer__text Мы в социальных сетях
 				ul.footer__social.social
 					li.social__elem
-						a.social__link(href="", target="_blank", rel="noreferrer", aria-label="Youtube")
+						a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Youtube")
 							+svg("youtube-blue")(class="social__link-icon")
 					li.social__elem
-						a.social__link(href="", target="_blank", rel="noreferrer", aria-label="Telegram")
+						a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Telegram")
 							+svg("telegram")(class="social__link-icon")
