--- a/src/scss/components/blocks/_dropdown.scss
+++ b/src/scss/components/blocks/_dropdown.scss
@@ -23,6 +23,10 @@
 		.dropdown--gray-border & {
 			border: 1px solid #E2E2E2;
 		}
+
+		.dropdown--logopark & {
+			border: 1px solid #DADADA;
+		}
 	}
 
 	&__value {
@@ -54,6 +58,12 @@
 			padding-bottom: 19px;
 		}
 
+		.dropdown--logopark & {
+			padding-top: 15px;
+			padding-bottom: 15px;
+			font-size: 16px;
+			color: $color-blue;
+		}
 	}
 
 	&__flag {
