--- a/src/scss/components/blocks/_social.scss
+++ b/src/scss/components/blocks/_social.scss
@@ -4,8 +4,16 @@
 	padding-left: 0;
 	list-style-type: none;
 
+	&--big {
+		margin: 0 -7px;
+	}
+
 	&__elem {
 		padding: 0 8px;
+
+		.social--big & {
+			padding: 0 7px;
+		}
 	}
 
 	&__link {
@@ -21,5 +29,10 @@
 	&__link-icon {
 		width: 36px;
 		height: 36px;
+
+		.social--big & {
+			width: 50px;
+			height: 50px;
+		}
 	}
 }
