--- a/css/main.css
+++ b/css/main.css
@@ -791,6 +791,9 @@ a {
 .text-weight-light {
   font-weight: 300; }
 
+.text-weight-bold {
+  font-weight: 700; }
+
 .container {
   width: 100%;
   max-width: 1686px;
@@ -990,6 +993,10 @@ a {
     overflow: hidden; }
     .dropdown--with-flag .dropdown__value-box {
       border-radius: 0; }
+    .dropdown--gray-border .dropdown__value-box {
+      border: 1px solid #E2E2E2; }
+    .dropdown--logopark .dropdown__value-box {
+      border: 1px solid #DADADA; }
   .dropdown__value {
     width: 100%;
     padding: 21px 50px 21px 26px;
@@ -1004,6 +1011,17 @@ a {
       outline: none; }
     .dropdown--with-flag .dropdown__value {
       padding: 0 15px 0 34px; }
+    .dropdown--gray-border .dropdown__value {
+      padding-top: 25px;
+      padding-bottom: 25px; }
+    .dropdown--multi-select .dropdown__value {
+      padding-top: 19px;
+      padding-bottom: 19px; }
+    .dropdown--logopark .dropdown__value {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      font-size: 16px;
+      color: #004996; }
   .dropdown__flag {
     position: absolute;
     top: 50%;
@@ -1086,6 +1104,55 @@ a {
       right: 0;
       width: 10px;
       height: 5px; }
+  .dropdown__value-counter {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    min-width: 32px;
+    height: 32px;
+    margin-left: 10px;
+    background-color: #004996;
+    border-radius: 32px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 700;
+    color: #fff; }
+  .dropdown__checkbox {
+    cursor: pointer; }
+  .dropdown__checkbox-input {
+    display: none; }
+  .dropdown__checkbox-text {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .dropdown__checkbox-text::before {
+      display: block;
+      width: 18px;
+      height: 18px;
+      margin-right: 8px;
+      border-radius: 6px;
+      border: 1px solid #004996;
+      content: "";
+      -webkit-transition: background-color 0.2s ease, -webkit-box-shadow 0.2s ease;
+      transition: background-color 0.2s ease, -webkit-box-shadow 0.2s ease;
+      -o-transition: background-color 0.2s ease, box-shadow 0.2s ease;
+      transition: background-color 0.2s ease, box-shadow 0.2s ease;
+      transition: background-color 0.2s ease, box-shadow 0.2s ease, -webkit-box-shadow 0.2s ease; }
+    .dropdown__checkbox-input:checked + .dropdown__checkbox-text::before {
+      background-color: #004996;
+      -webkit-box-shadow: inset 0 0 0 4px #fff;
+              box-shadow: inset 0 0 0 4px #fff; }
 
 .button {
   display: -webkit-inline-box;
@@ -1219,6 +1286,8 @@ a {
       width: 606px;
       height: 340px;
       background-image: url("../images/footer/bg2.svg"); }
+    .footer--low-top-padding .footer__container {
+      padding-top: 14px; }
   .footer__row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1302,8 +1371,12 @@ a {
   margin: 0 -8px;
   padding-left: 0;
   list-style-type: none; }
+  .social--big {
+    margin: 0 -7px; }
   .social__elem {
     padding: 0 8px; }
+    .social--big .social__elem {
+      padding: 0 7px; }
   .social__link {
     display: inline-block;
     color: #004996;
@@ -1315,11 +1388,13 @@ a {
   .social__link-icon {
     width: 36px;
     height: 36px; }
+    .social--big .social__link-icon {
+      width: 50px;
+      height: 50px; }
 
 .card {
   position: relative;
   z-index: 0;
-  min-height: 379px;
   padding: 37px 42px 40px;
   border-radius: 25px;
   background-color: #004996;
@@ -1338,7 +1413,7 @@ a {
             align-items: flex-start;
     padding-top: 70px;
     padding-bottom: 49px; }
-  .card--experience {
+  .card--experience, .card--cases {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1351,6 +1426,8 @@ a {
             align-items: flex-start;
     min-height: 300px;
     padding: 34px 26px 29px; }
+  .card--cases {
+    border-radius: 10px; }
   .card--other-services {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1362,7 +1439,8 @@ a {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    padding: 37px 45px 48px; }
+    padding: 37px 45px 48px;
+    min-height: 379px; }
   .card__title-box {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1380,6 +1458,9 @@ a {
       margin-top: auto;
       width: 100%;
       margin-bottom: 17px; }
+    .card--cases .card__title-box {
+      width: 100%;
+      margin-bottom: 17px; }
     .card--text-top-medium .card__title-box {
       margin-bottom: 29px; }
     .card--other-services .card__title-box {
@@ -1391,12 +1472,14 @@ a {
     font-size: 32px;
     line-height: 36px;
     font-weight: 900; }
-    .card--experience .card__title {
+    .card--experience .card__title,
+    .card--cases .card__title {
       font-family: "Roboto", sans-serif; }
   .card__arrow {
     width: 22px;
     height: 36px; }
-    .card--experience .card__arrow {
+    .card--experience .card__arrow,
+    .card--cases .card__arrow {
       width: 40px;
       height: 74px;
       margin-right: 23px; }
@@ -1453,6 +1536,12 @@ a {
       -webkit-transform: none;
           -ms-transform: none;
               transform: none; }
+    .card--cases .card__text-box {
+      margin: auto 0;
+      font-family: "Montserrat", sans-serif;
+      font-size: 14px;
+      line-height: 18px;
+      font-weight: 500; }
   .card__text {
     margin: 0; }
     .card__text:not(:last-child) {
@@ -1492,6 +1581,9 @@ a {
     line-height: 18px;
     font-weight: 500;
     color: #004996; }
+    .card--cases .card__tag {
+      font-family: "Roboto Condensed", sans-serif;
+      font-weight: 700; }
 
 .nav-list {
   display: -ms-grid;
@@ -1555,6 +1647,9 @@ a {
 
 .slider {
   overflow: visible; }
+  .slider--one-slide {
+    position: relative;
+    overflow: hidden; }
   .slider__slide {
     position: relative;
     display: -webkit-box;
@@ -1585,6 +1680,8 @@ a {
           -ms-flex-pack: center;
               justify-content: center; }
     .slider--simple .slider__slide {
+      padding-bottom: 0; }
+    .slider--one-slide .slider__slide {
       padding-bottom: 0; }
   .slider__slide-bg-box {
     -webkit-box-flex: 1;
@@ -1690,6 +1787,15 @@ a {
       padding: 11px 18px;
       border-radius: 40px;
       background-color: #fff; }
+    .slider--one-slide .slider__nav {
+      position: absolute;
+      z-index: 10;
+      bottom: 48px;
+      right: 57px;
+      margin: 0;
+      padding: 10px 20px;
+      background-color: #fff;
+      border-radius: 25px; }
   .slider__pagintaion {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2247,6 +2353,25 @@ a {
   width: 100%;
   max-width: 243px; }
 
+.decision {
+  display: block;
+  margin: 0;
+  padding: 64px;
+  border-radius: 10px;
+  background-color: #fff; }
+  .decision__title {
+    margin-top: 0;
+    margin-bottom: 26px;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700; }
+  .decision__text {
+    margin: 0;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 18px;
+    line-height: 16px;
+    font-weight: 500; }
+
 .section-ready {
   padding-top: 74px;
   padding-bottom: 35px; }
@@ -2668,7 +2793,7 @@ a {
         -ms-flex-pack: justify;
             justify-content: space-between;
     height: 100%;
-    padding: 58px 52px 58px 45px;
+    padding: 45px 52px 45px 45px;
     border-radius: 25px;
     background-color: #fff;
     font-family: "Roboto Condensed", sans-serif;
@@ -2679,8 +2804,8 @@ a {
       background-color: #004996; }
   .section-invite__card-title {
     margin-top: 0;
-    margin-bottom: 18px;
-    font-size: 24px;
+    margin-bottom: 26px;
+    font-size: 32px;
     line-height: 32px;
     font-weight: 700;
     color: #004996;
@@ -2691,10 +2816,10 @@ a {
       color: #fff; }
   .section-invite__card-text {
     width: 100%;
-    max-width: 390px;
+    max-width: 513px;
     margin: 0;
-    font-size: 16px;
-    line-height: 14px;
+    font-size: 25px;
+    line-height: 25px;
     font-weight: 500;
     color: #000;
     -webkit-transition: color 0.2s ease;
@@ -2739,6 +2864,9 @@ a {
   .section-hero--with-cards {
     margin-bottom: 109px;
     padding-bottom: 11px; }
+  .section-hero--case {
+    margin-bottom: 290px;
+    padding-bottom: 42px; }
   .section-hero__bg {
     position: absolute;
     z-index: -2;
@@ -2763,6 +2891,8 @@ a {
       font-size: 32px;
       line-height: 32px;
       font-weight: 700; }
+    .section-hero--case .section-hero__title {
+      margin-bottom: 60px; }
   .section-hero__text {
     margin: 0;
     font-size: 18px;
@@ -2779,6 +2909,8 @@ a {
       font-family: "Roboto Condensed", sans-serif;
       font-size: 24px;
       line-height: 24px; }
+    .section-hero--case .section-hero__text {
+      margin-bottom: 70px; }
   .section-hero__card-row {
     display: -ms-grid;
     display: grid;
@@ -2794,6 +2926,8 @@ a {
   .section-hero__card-row > *:nth-child(2) {
   -ms-grid-row: 1;
   -ms-grid-column: 3; }
+    .section-hero--case .section-hero__card-row {
+      margin-bottom: -290px; }
   .section-hero__card {
     width: 100%;
     padding: 54px 50px 74px;
@@ -2801,6 +2935,9 @@ a {
     border-radius: 10px;
     text-align: center;
     color: #000; }
+    .section-hero--case .section-hero__card {
+      padding: 46px 68px 31px;
+      text-align: left; }
   .section-hero__card-title {
     margin-top: 0;
     margin-bottom: 24px;
@@ -2808,6 +2945,9 @@ a {
     line-height: 50px;
     font-weight: 700;
     color: #00539F; }
+    .section-hero--case .section-hero__card-title {
+      font-size: 24px;
+      color: #000; }
   .section-hero__card-text {
     margin: 0;
     font-size: 14px;
@@ -3808,5 +3948,341 @@ a {
   .section-other-services__grid > *:nth-child(2) {
   -ms-grid-row: 1;
   -ms-grid-column: 3; }
+
+.section-terminals {
+  padding-top: 5px;
+  padding-bottom: 17px; }
+  .section-terminals__title-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 78px; }
+  .section-terminals__title {
+    margin: 0;
+    font-family: "Roboto", sans-serif; }
+  .section-terminals__dropdown-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 -16px; }
+  .section-terminals__dropdown {
+    width: 387px;
+    margin: 0 16px; }
+  .section-terminals__content-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .section-terminals__content {
+    width: 50%;
+    position: relative;
+    z-index: 10; }
+  .section-terminals__cities {
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 32px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #004996; }
+  .section-terminals__description {
+    width: 100%;
+    max-width: calc(100% - 220px);
+    margin-top: 0;
+    margin-bottom: 78px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 500; }
+  .section-terminals__data-list {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 32px 1fr 32px 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+    grid-column-gap: 32px;
+    grid-row-gap: 32px;
+    margin: 0;
+    padding: 0; }
+  .section-terminals__data-list > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1; }
+  .section-terminals__data-list > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3; }
+  .section-terminals__data-list > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5; }
+  .section-terminals__data {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    min-height: 110px;
+    padding: 5px 10px;
+    background-color: #fff;
+    border-radius: 25px;
+    font-family: "Roboto Condensed", sans-serif;
+    line-height: 32px;
+    font-weight: 800;
+    color: #004996;
+    text-align: center; }
+    .section-terminals__data--with-blue-rect {
+      position: relative; }
+      .section-terminals__data--with-blue-rect::after {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 36px;
+        height: 36px;
+        background-color: #004996;
+        border-radius: 10px 10px 25px 10px;
+        content: ""; }
+  .section-terminals__data-value {
+    margin-top: 0;
+    margin-bottom: 5px;
+    font-size: 32px; }
+  .section-terminals__data-text {
+    margin: 0;
+    font-size: 18px; }
+  .section-terminals__slider-box {
+    width: calc(50% + 120px);
+    margin-left: -120px; }
+  .section-terminals__slider {
+    width: 100%; }
+
+.section-case-list {
+  padding-top: 5px;
+  padding-bottom: 31px; }
+  .section-case-list--other {
+    padding-top: 70px;
+    padding-bottom: 16px; }
+  .section-case-list__title-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 39px; }
+    .section-case-list--other .section-case-list__title-box {
+      margin-bottom: 60px; }
+  .section-case-list__title {
+    margin: 0;
+    font-family: "Roboto", sans-serif; }
+  .section-case-list__description {
+    margin-top: 0;
+    margin-bottom: 50px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.5); }
+  .section-case-list__dropdown-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 -16px; }
+  .section-case-list__dropdown {
+    width: 387px;
+    margin: 0 16px; }
+  .section-case-list__grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 32px 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+    grid-column-gap: 32px;
+    grid-row-gap: 32px;
+    margin-bottom: 60px; }
+  .section-case-list__grid > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1; }
+  .section-case-list__grid > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3; }
+  .section-case-list__button-row {
+    text-align: center; }
+  .section-case-list__button {
+    width: 100%;
+    max-width: 248px; }
+
+.section-contact-info {
+  padding-top: 21px;
+  padding-bottom: 123px; }
+  .section-contact-info__title {
+    margin-top: 0;
+    margin-bottom: 44px; }
+  .section-contact-info__links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 -72px 74px; }
+  .section-contact-info__links-col {
+    padding: 0 72px; }
+  .section-contact-info__link {
+    display: inline-block;
+    margin-bottom: 16px;
+    font-size: 32px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #000;
+    -webkit-transition: color 0.2s ease;
+    -o-transition: color 0.2s ease;
+    transition: color 0.2s ease; }
+    .section-contact-info__link:hover {
+      color: #E10000; }
+    .section-contact-info__link--mail {
+      margin-bottom: 54px; }
+  .section-contact-info__link-description {
+    margin-top: 0;
+    margin-bottom: 36px;
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 700; }
+    .section-contact-info__link-description:last-child {
+      margin-bottom: 0; }
+  .section-contact-info__mail-button {
+    width: 270px; }
+  .section-contact-info__object {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 44px; }
+  .section-contact-info__object-col {
+    width: 100%; }
+    .section-contact-info__object-col--text {
+      max-width: 42%; }
+    .section-contact-info__object-col--map {
+      max-width: 58%; }
+  .section-contact-info__dropdown {
+    width: 100%;
+    max-width: 227px;
+    margin-bottom: 40px; }
+  .section-contact-info__object-title {
+    margin-top: 0;
+    margin-bottom: 36px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 32px;
+    line-height: 48px;
+    font-weight: 700; }
+  .section-contact-info__object-text {
+    margin-top: 0;
+    margin-bottom: 46px;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 300; }
+  .section-contact-info__object-time {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 46px; }
+  .section-contact-info__object-time-icon {
+    width: 42px;
+    height: 42px;
+    margin-right: 19px; }
+  .section-contact-info__object-work-text {
+    margin-top: 0;
+    margin-bottom: 2px;
+    font-size: 24px;
+    line-height: 24px; }
+  .section-contact-info__map {
+    width: 100%;
+    border-radius: 25px; }
+  .section-contact-info__route {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .section-contact-info__rules {
+    position: relative;
+    z-index: 10;
+    width: 100%;
+    max-width: 42%;
+    background-color: #fff;
+    border-radius: 25px;
+    color: #202020;
+    -webkit-box-shadow: 0 4px 50px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 4px 50px rgba(0, 0, 0, 0.25);
+    overflow: hidden; }
+  .section-contact-info__rules-text-box {
+    padding: 40px; }
+  .section-contact-info__rules-title {
+    margin-top: 0;
+    margin-bottom: 32px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 32px;
+    line-height: 40px;
+    font-weight: 700; }
+  .section-contact-info__rules-subtitle {
+    margin-top: 0;
+    margin-bottom: 40px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 700; }
+  .section-contact-info__cite {
+    margin-bottom: 33px;
+    padding: 0 18px;
+    border-left: 4px solid #E10000;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 300; }
+  .section-contact-info__cite-text {
+    margin: 0; }
+  .section-contact-info__rules-phone {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #000;
+    -webkit-transition: color 0.2s ease;
+    -o-transition: color 0.2s ease;
+    transition: color 0.2s ease; }
+    .section-contact-info__rules-phone:hover {
+      color: #E10000; }
+  .section-contact-info__rules-text {
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 300; }
+  .section-contact-info__rules-photo {
+    display: block;
+    margin-top: auto;
+    width: 100%;
+    border-radius: 25px;
+    -webkit-box-shadow: 0 4px 50px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 4px 50px rgba(0, 0, 0, 0.25); }
+  .section-contact-info__map-route-box {
+    width: calc(58% + 40px);
+    margin-left: -40px;
+    border-radius: 25px;
+    overflow: hidden; }
+  .section-contact-info__map-route {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover; }
 
 /*# sourceMappingURL=main.css.map */
