feat: add About page

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -16,6 +16,10 @@
 @import "blocks/job-search";
 @import "blocks/results";
 @import "blocks/decision";
+@import "blocks/about-people";
+@import "blocks/about-gallery";
+@import "blocks/about-download";
+@import "blocks/timeline";
 
 @import "sections/section-ready";
 @import "sections/section-nav";
@@ -44,3 +48,4 @@
 @import "sections/section-terminals";
 @import "sections/section-case-list";
 @import "sections/section-contact-info";
+@import "sections/section-about";
