--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -20,6 +20,8 @@ block content
 				a(href="404.html", target="_blank") 404
 			li.list-arrow__elem
 				a(href="contacts.html", target="_blank") Контакты
+			li.list-arrow__elem
+				a(href="about.html", target="_blank") О нас (4 экрана)
 			li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="industry-list.html", target="_blank") Индустрии
