--- a/src/scss/components/blocks/_tabs.scss
+++ b/src/scss/components/blocks/_tabs.scss
@@ -15,6 +15,11 @@
 			border-radius: 4px;
 			content: "";
 		}
+		&.tabs--blue-no-bottom-border {
+			&::after {
+				content: none;
+			}
+		}
 	}
 
 	&__nav-list {
