--- a/src/scss/components/blocks/_header.scss
+++ b/src/scss/components/blocks/_header.scss
@@ -56,6 +56,29 @@
 		}
 	}
 
+	&__search-form {
+		display: none;
+		position: absolute;
+		z-index: 10;
+		top: 0;
+		left: 0;
+		transform: translateY(-100%);
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		transition: transform $transition-default, opacity $transition-default;
+
+		.header--search-show & {
+			display: flex;
+		}
+
+		.header--search-shown & {
+			display: flex;
+			transform: translateY(0);
+			opacity: 1;
+		}
+	}
+
 	&__search {
 		display: flex;
 		align-items: center;
@@ -65,6 +88,31 @@
 		border-style: solid;
 		border-color: rgba(#3C3C3C26, .15);
 		border-width: 0 1px;
+	}
+
+	&__search-button {
+		display: flex;
+		align-items: center;
+		padding: 10px 4px;
+		border: none;
+		background-color: $color-transparent;
+		font-family: $font-additional;
+		font-size: 12px;
+		line-height: 18px;
+		font-weight: 700;
+		color: rgba($color-black, .3);
+		transition: color $transition-default;
+
+		&:hover {
+			color: $color-black;
+		}
+	}
+
+	&__search-button-icon {
+		width: 24px;
+		height: 24px;
+		margin-right: 10px;
+		color: $color-black;
 	}
 
 	&__lang {
@@ -122,7 +170,7 @@
 			border-radius: 4px;
 			background-color: $color-transparent;
 			content: "";
-			transition: background-color $transition-default, transform $transition-default;
+			transition: background-color $transition-default, transform $transition-default, opacity $transition-default;
 		}
 
 		&:hover,
@@ -132,6 +180,12 @@
 			&::after {
 				background-color: $color-red;
 				transform: translateX(-50%) scaleX(1);
+			}
+		}
+
+		.header--search-show & {
+			&::after {
+				opacity: 0;
 			}
 		}
 	}
