--- a/src/scss/components/blocks/_search-form.scss
+++ b/src/scss/components/blocks/_search-form.scss
@@ -1,6 +1,13 @@
 .search-form {
 	display: flex;
 	align-items: center;
+	background-color: $color-white;
+	width: 100%;
+
+	&__row {
+		display: flex;
+		align-items: center;
+	}
 
 	&__input {
 		width: 100%;
@@ -13,6 +20,10 @@
 
 		&::placeholder {
 			color: rgba($color-black, .3)
+		}
+
+		&:focus {
+			outline: none;
 		}
 	}
 
@@ -30,10 +41,53 @@
 		&:hover {
 			color: $color-blue;
 		}
+
+		&:focus {
+			outline: none;
+		}
 	}
 
 	&__submit-icon {
 		width: 24px;
 		height: 24px;
+	}
+
+	&__close-button {
+		position: relative;
+		width: 48px;
+		height: 48px;
+		background-color: $color-transparent;
+		border: none;
+
+		&:focus {
+			outline: none;
+		}
+
+		&::before,
+		&::after {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 24px;
+			height: 2px;
+			background-color: $color-black;
+			content: "";
+			transition: background-color $transition-default;
+		}
+
+		&::before {
+			transform: translate(-50%, -50%) rotate(45deg);
+		}
+
+		&::after {
+			transform: translate(-50%, -50%) rotate(-45deg);
+		}
+
+		&:hover {
+			&::before,
+			&::after {
+				background-color: $color-red;
+			}
+		}
 	}
 }
