--- a/src/about.pug
+++ b/src/about.pug
@@ -166,7 +166,7 @@ block content
 								img.about-gallery__image(src="images/section-about/cert5.jpg", alt)
 								img.about-gallery__image(src="images/section-about/cert1.jpg", alt)
 						.about-gallery__button-row
-							button.button.button--sm.button--outline-blue.button--text-big.about-gallery__button Показать еще
+							button.button.button--sm.button--outline-blue.about-gallery__button Показать еще
 
 
 	// Section Invite
