--- a/src/career-item.pug
+++ b/src/career-item.pug
@@ -20,7 +20,7 @@ block content
 			h2.h2.text-blue.section-vacancy-item__title Вакансии по рекламациям, Москва
 			.section-vacancy-item__description
 				p.section-vacancy-item__salary от 99 000 ₽ / мес.
-				button.button.button--blue.button--sm.button--text-big.section-vacancy-item__button Оставить заявку
+				button.button.button--blue.button--sm.section-vacancy-item__button Оставить заявку
 				p.section-vacancy-item__date Размещено: 3 дня назад
 			// Panel
 			.section-vacancy-item__panel
