--- a/src/career-list.pug
+++ b/src/career-list.pug
@@ -37,7 +37,7 @@ block content
 							li.dropdown__option(data-value="HR отдел") HR отдел
 							li.dropdown__option(data-value="Склад") Склад
 							li.dropdown__option(data-value="Служба качества") Служба качества
-					button.button.button--outline-blue.button--md.button--text-big(type="submit") Найти
+					button.button.button--outline-blue.button--sm(type="submit") Найти
 			h2.h2.text-blue.section-vacancy__title Вакансии, Менеджмент
 			p.section-vacancy__subtitle Найдено вакансий: 225
 			.section-vacancy__grid
