--- a/src/career.pug
+++ b/src/career.pug
@@ -43,7 +43,7 @@ block content
 							li.dropdown__option(data-value="HR отдел") HR отдел
 							li.dropdown__option(data-value="Склад") Склад
 							li.dropdown__option(data-value="Служба качества") Служба качества
-					button.button.button--outline-white.button--md.button--text-big(type="submit") Найти
+					button.button.button--outline-white.button--sm(type="submit") Найти
 			img.section-hero__bg(src="images/section-hero/bg2.jpg", alt)
 
 	// Section Services
@@ -53,7 +53,7 @@ block content
 				h2.h2.text-blue.section-services__title Категории вакансий
 				a.button.button--white.button--sm(href="#") Все категории
 			.section-services__nav.nav-row
-				ul.nav-list
+				ul.nav-list.nav-list
 					li.nav-list__elem
 						a.nav-list__link.nav-list__link--active(href="#") Менеджмент
 					li.nav-list__elem
@@ -63,9 +63,7 @@ block content
 					li.nav-list__elem
 						a.nav-list__link(href="#") Склад
 					li.nav-list__elem
-						a.nav-list__link(href="#") Служба
-							br
-							| качества
+						a.nav-list__link(href="#") Служба качества
 
 	// Section Career
 	section.section-career.container
