--- a/src/case-list.pug
+++ b/src/case-list.pug
@@ -122,7 +122,7 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-cases/bg6.jpg", alt)
 		.section-case-list__button-row
-			button.button.button--white.button--md.button--text-big.section-case-list__button Показать еще
+			button.button.button--white.button--md.section-case-list__button Показать еще
 
 	// Section Invite
 	.section-invite
