--- a/src/contacts.pug
+++ b/src/contacts.pug
@@ -35,7 +35,7 @@ block content
 						a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Youtube")
 							+svg("youtube-blue")(class="social__link-icon")
 			.section-contact-info__links-col
-				a.button.button--blue.button--sm.button--text-medium.section-contact-info__mail-button(href="mailto:sales_mt@mjr.ru") Написать нам
+				a.button.button--blue.button--sm.section-contact-info__mail-button(href="mailto:sales_mt@mjr.ru") Написать нам
 		.section-contact-info__object
 			.section-contact-info__object-col.section-contact-info__object-col--text
 				.dropdown.dropdown--logopark.section-contact-info__dropdown
