--- a/src/industry.pug
+++ b/src/industry.pug
@@ -110,7 +110,7 @@ block content
 						.section-request__col
 							img.section-request__img(src="images/section-request/img.svg", alt)
 				// Content
-				.section-request__tab-content.tabs__content#content2
+				.tabs__content.section-request__tab-content.tabs__content#content2
 					.section-request__content-row
 						.section-request__col
 							h2.h2.text-blue.section-request__title Возможности Major Terminal позволяют организовать
@@ -128,7 +128,7 @@ block content
 						.section-request__col
 							img.section-request__img(src="images/section-request/img2.svg", alt)
 				// Content
-				.section-request__tab-content.section-request__tab-content--n1.tabs__content.tabs__content--active#content3
+				.tabs__content.section-request__tab-content.section-request__tab-content--n1#content3
 					.section-request__content-row
 						.section-request__col
 							h2.h2.text-blue.section-request__content-title Все
@@ -146,23 +146,17 @@ block content
 						.section-request__col
 							img.section-request__img(src="images/section-request/img.svg", alt)
 				// Content
-				.section-request__tab-content.section-request__tab-content--n1.tabs__content.tabs__content--active#content4
+				.tabs__content.section-request__tab-content.section-request__tab-content--n1#content4
 					.section-request__content-row
 						.section-request__col
-							h2.h2.text-blue.section-request__content-title Все
-								|
-								|
-								span.text-blue-light складские услуги
-								br
-								| у одного оператора
+							h2.h2.text-blue.section-request__content-title Дистрибуция по России
 							ul.list-arrow.list-arrow--red.section-request__list
-								li.list-arrow__elem Cтикеровка, маркировка (включая Честный Знак)
-								li.list-arrow__elem Переупаковка
-								li.list-arrow__elem Копакинг
-								li.list-arrow__elem Измерение МГХ
+								li.list-arrow__elem Подбор типа доставки (по времени, цене, значимости)
+								li.list-arrow__elem Отслеживание грузов, предварительные оповещения получателей
+								li.list-arrow__elem Координация поставщиков транспорта
 							a.button.button--blue.button--md.section-request__button(href="#") Оставить заявку
 						.section-request__col
-							img.section-request__img(src="images/section-request/img.svg", alt)
+							img.section-request__img(src="images/section-request/img4.svg", alt)
 
 	// Section Description
 	.section-description.container
