--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -21,12 +21,12 @@ block content
 			li.list-arrow__elem
 				a(href="contacts.html", target="_blank") Контакты
 			li.list-arrow__elem
-				a(href="about.html", target="_blank") О нас (4 экрана)
+				a(href="about.html", target="_blank") О нас (4 вкладки)
 			li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="industry-list.html", target="_blank") Индустрии
 			li.list-arrow__elem
-				a(href="industry.html", target="_blank") Карточка индустрии
+				a(href="industry.html", target="_blank") Карточка индустрии (3 вкладки)
 			li.list-arrow__elem -----------------------------------
 			li.list-arrow__elem
 				a(href="case-list.html", target="_blank") Наши кейсы
