--- a/src/press-item.pug
+++ b/src/press-item.pug
@@ -5,7 +5,7 @@ prepend vars
 
 append vars
 	-
-		title = "Пресс-релизы"
+		title = "Пресс-релиз"
 		meta.description = "Описание"
 		link.icon = "favicons/favicon.ico"
 		link.icon16x16 = "favicons/favicon-16x16.png"
