--- a/src/press-list.pug
+++ b/src/press-list.pug
@@ -70,7 +70,7 @@ block content
 							br
 							| на 06 октября
 		.section-press-list__button-row
-			button.button.button--outline-blue.button--md.button--text-big.section-press-list__button Показать еще
+			button.button.button--outline-blue.button--md.section-press-list__button Показать еще
 
 	// Section Invite
 	.section-invite
