--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $color-transparent: rgba(#fff, 0);
-$color-body: #F6F6F6;
+$color-body: rgba(#E2E2E2, .3);
 $color-black: #000;
 $color-white: #fff;
 $color-gray: #eee;
