--- a/src/scss/components/sections/_section-partner.scss
+++ b/src/scss/components/sections/_section-partner.scss
@@ -21,6 +21,10 @@
 		&--content {
 			padding-top: 7px;
 			max-width: 43%;
+			background-image: url("../images/section-partner/bg2.svg");
+			background-size: contain;
+			background-position: 20px center;
+			background-repeat: no-repeat;
 		}
 	}
 
