--- a/src/scss/components/sections/_section-vacancy.scss
+++ b/src/scss/components/sections/_section-vacancy.scss
@@ -32,6 +32,7 @@
 		padding: 30px 22px 32px;
 		border: 1px solid #E2E2E2;
 		border-radius: 10px;
+		background-color: $color-white;
 		color: $color-black;
 		transition: background-color $transition-default, color $transition-default, border-color $transition-default;
 
