--- a/src/service-list.pug
+++ b/src/service-list.pug
@@ -79,6 +79,6 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-service-list/bg6.jpg", alt)
 		.section-service-list__button-row
-			button.button.button--outline-blue.button--sm.button--text-medium.section-service-list__button Показать еще
+			button.button.button--outline-blue.button--sm.section-service-list__button Показать еще
 
 
