--- a/src/case-item.pug
+++ b/src/case-item.pug
@@ -105,7 +105,7 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-cases/bg4.jpg", alt)
 		.section-case-list__button-row
-			button.button.button--outline-blue.button--md.button--text-big.section-case-list__button Показать еще
+			button.button.button--outline-blue.button--md.section-case-list__button Показать еще
 
 	// Section Invite
 	.section-invite
