--- a/src/scss/components/blocks/_slider.scss
+++ b/src/scss/components/blocks/_slider.scss
@@ -1,5 +1,11 @@
 .slider {
-	overflow: visible;
+	//overflow: visible;
+
+	&--with-wide-slide {
+		padding-top: 30px;
+		padding-left: 30px;
+		margin-left: -30px;
+	}
 
 	&--one-slide {
 		position: relative;
@@ -11,13 +17,13 @@
 		display: flex;
 		flex-direction: column;
 		height: auto;
-		width: 383px;
+		width: calc(25% - 32px);
 		padding-bottom: 34px;
 		border-radius: 25px;
 		user-select: none;
 
 		&--wide {
-			width: 800px;
+			width: 50%;
 		}
 
 		&--video {
@@ -58,10 +64,10 @@
 		padding: 28px 49px;
 		border-radius: 25px;
 		background-color: $color-white;
-		font-family: $font-additional;
+		font-family: $font-secondary;
 		font-size: 24px;
 		line-height: 1;
-		font-weight: 500;
+		font-weight: 700;
 
 		.slider__slide--wide & {
 			right: 70px;
