--- a/src/scss/components/blocks/_tabs.scss
+++ b/src/scss/components/blocks/_tabs.scss
@@ -15,6 +15,7 @@
 			border-radius: 4px;
 			content: "";
 		}
+
 		&.tabs--blue-no-bottom-border {
 			&::after {
 				content: none;
@@ -116,6 +117,7 @@
 			line-height: 1;
 			font-weight: 700;
 			letter-spacing: .01em;
+			color: #429EDD;
 
 			&::after {
 				max-width: 100%;
